<resources>
    <string name="app_name">BelarusChess</string>
    <string name="followers_hint">Followers</string>
    <string name="following_hint">Following</string>
    <string name="friends_hint">Friends:</string>
    <string name="coach_hint">Coach:</string>
    <string name="search_user_query_hint">Enter user name</string>
    <string name="search_query_hint">Enter text</string>
    <string name="search_tournament_query_hint">Enter tournament name</string>
    <string name="search_hint">search</string>
    <string name="not_enough_symbols_msg">Please enter at least one symbol</string>
    <string name="loading_error_msg">Error during loading info</string>
    <string name="fa_map_marker">\uf041</string>
    <string name="fa_heart_o">\uf08a</string>
    <string name="fa_retweet">\uf079</string>
    <string name="fa_calendar">\uf073</string>
    <string name="fa_clock">\uf017</string>
    <string name="ion_search"></string>
    <string name="nick">Nick</string>
    <string name="default_text">Default text</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_games">Games</string>
    <string name="action_table">Table</string>
    <string name="action_participants">Participants</string>
    <string name="action_users">Users</string>
    <string name="action_tournaments">Tournaments</string>
    <string name="action_world_tournaments">World tournaments</string>
    <string name="action_world_rating">Мировой рейтинг</string>
    <string name="action_places">Places</string>
    <string name="action_info">Info</string>
    <string name="draw">Draw</string>
    <string name="tours">Tours</string>
    <string name="action_tournaments_search">Tournaments</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAccount">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="userName">Name</string>
    <string name="tournamentName">Tournament name</string>
    <string name="placeName">Place name</string>
    <string name="tournamentShortDescription">Tournament short description</string>
    <string name="tournamentShortDescriptionHint">Short description</string>
    <string name="tournamentFullDescription">Tournament full description</string>
    <string name="tournamentFullDescriptionHint">Full description</string>
    <string name="placeCity">Place city</string>
    <string name="placeCityHint">City</string>
    <string name="placeStreet">Place street</string>
    <string name="placeStreetHint">Street</string>
    <string name="placeCapacityHint">Capacity</string>
    <string name="placeBuildingHint">Building</string>
    <string name="userSurname">Surname</string>
    <string name="userPatronymic">Patronymic</string>
    <string name="userAddress">Address</string>
    <string name="userRating">Rating:</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="renterPassword">Re-enter Password</string>
    <string name="createAccount">Create Account</string>
    <string name="addTournament">Add tournament</string>
    <string name="isMember">Already a member? Login</string>
    <string name="logo">Logo</string>
    <string name="please_wait">Please, wait …</string>
    <string name="successful_draw">The draw is successfully conducted</string>
    <string name="connection_error">Connection error!</string>
    <string name="incorrect_email">Incorrect email! Please, try again.</string>
    <string name="incorrect_rating">Incorrect rating! Please, try again.</string>
    <string name="incorrect_capacity">Incorrect capacity! Please, try again.</string>
    <string name="incorrect_data">Incorrect data! Please, try again.</string>
    <string name="incorrect_tournament_name">Incorrect tournament name! Please, try again.</string>
    <string name="incorrect_password">Incorrect password! Please, enter more than 4 characters.</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="count_points">Points:</string>
    <string name="judge">Judge:</string>
    <string name="tournament_register">Register</string>
    <string name="position_number">Position:</string>
    <string name="userRating_number">1900</string>
    <string name="user_name">Name</string>
    <string name="user_full_name_placeholder">%1$s %2$s</string>
    <string name="dash">-</string>
    <string name="absence">Absence</string>
    <string name="rank_absence">Rank is absence</string>
    <string name="coach_absence">Coach is absence</string>
    <string name="coach">Coach:</string>
    <string name="notSelected">Not selected</string>
    <string name="chooseReferee">Choose a referee</string>
    <string name="chooseCountry">Choose a country</string>
    <string name="choosePlace">Choose a place</string>
    <string name="retry">Retry</string>
    <string name="incorrectEmailOrPassword">Incorrect email or password!</string>
    <string name="serverIsUnavailable">Server is unavailable</string>
    <string name="serverIsUnavailableMessage">Sorry, we are not ready right now. Please, try again later</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="noInternetConnectionMessage">Internet not available, please check your internet connectivity and try again"</string>
    <string name="incorrectData">Incorrect data! Please, try again"</string>
    <string name="title_activity_main">Range Picker</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="tournament">Tournament</string>
    <string name="tournament_team_type">Team\'s tournament</string>
    <string name="take_photo">Take a Photo</string>
    <string name="upload_server">Upload</string>
    <string name="uploaded">Successfully uploaded</string>
    <string name="judge_placeholder" formatted="true"> %s1 %s2</string>
    <string name="location_placeholder" formatted="true"> %s1, %s2, %s3, %s4</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="cntnue">Continue</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="abort">Abort</string>
    <string name="today">today</string>
    <string name="noEntries">No entries :(</string>
    <string name="noEventsFound">No events found :(</string>
    <string name="necessary">(necessary)</string>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="tournament_property_place">City</string>
    <string name="event_property_years">Years</string>
    <string name="event_property_year">Year</string>
    <string name="tournament_property_games_count">Games</string>
    <string name="tournament_property_country">Country</string>
    <string name="place_property_capacity">Capacity</string>
    <string name="place_property_country">Country</string>
    <string name="place_property_city">City</string>
    <string name="tournament_property_date">Date</string>
    <string name="event_property_birthday">Birthday</string>
    <string name="tournament_start_date">Start date</string>
    <string name="tournament_name">Tournament name</string>
    <string name="place_name">Name</string>
    <string name="tournament_end_date">End date</string>
    <string name="event_property_surname">Surname</string>
    <string name="event_property_nickname">Nickname</string>
    <string name="event_property_name">Name</string>
    <string name="event_property_note">Note</string>
    <string name="event_type_birthday">Birthday</string>
    <string name="event_type_annual_event">Annual event</string>
    <string name="event_type_one_time_event">One time event</string>
    <string name="rating">Rating</string>
    <string name="rank">Rank</string>
    <string name="country">Country</string>
    <string name="place">Place</string>
    <string name="points">Points</string>
    <string name="capacity">Capacity</string>
    <string name="alert_dialog_missing_avatar_img_title">Error when trying to load image!</string>
    <string name="alert_dialog_missing_avatar_img_text">There occurred an error when trying to load an avatar image.\nThe image reference is going to be deleted.</string>
    <string name="toolbar_title_add_tournament">Add tournament</string>
    <string name="toolbar_title_edit_tournament">Edit tournament</string>
    <string name="toolbar_title_add_user">Add user</string>
    <string name="toolbar_title_add_place">Add place</string>
    <string name="toolbar_title_edit_place">Edit place</string>
    <string name="future_tournament_error">You can\'t add future tournaments!\nPlease only use tournament dates in the past.</string>
    <string name="empty_fields_error_tournament">Make sure to fill fields forename and date!</string>
    <string name="tournament_added_notification">Tournament added</string>
    <string name="tournament_changed_notification">Tournament changed</string>
    <string name="tournament_deleted_notification">Tournament deleted</string>
    <string name="place_added_notification">Place added</string>
    <string name="place_changed_notification">Place changed</string>
    <string name="place_deleted_notification">Place deleted</string>
    <string name="btn_tournament_delete">Delete tournament</string>
    <string name="btn_place_delete">Delete place</string>
    <string name="verification_edit_date_input">The date input does not match the required date format!\nPlease use a format like: %1$s</string>
    <string name="avatar_btn_clicked_menu_item_select_photo">Choose from gallery</string>
    <string name="avatar_btn_clicked_menu_item_delete_photo">Remove photo</string>
    <string name="alert_dialog_title_delete_tournament">Delete tournament</string>
    <string name="alert_dialog_title_delete_place">Delete place</string>
    <string name="alert_dialog_body_message_place">Are you sure you want to delete this place?</string>
    <string name="alert_dialog_body_message_tournament">Are you sure you want to delete this tournament?</string>
    <string name="intent_share_chooser_title">Choose your app to share</string>
    <string name="person_show_date">Born on %1$s</string>
    <string name="person_days_until_today">The tournament of %1$s is today!</string>
    <plurals name="person_days_until">
        <item quantity="one">Next tournament of %1$s is in %2$d day on %3$s</item>
        <item quantity="other">Next tournament of %1$s is in %2$d days on %3$s.\nThis is in %4$s weeks.</item>
    </plurals>
    <plurals name="person_years_old">
        <item quantity="one">%1$s turns %2$d</item>
        <item quantity="other">%1$s turns %2$d</item>
    </plurals>
    <string name="share_place_name">%1$s</string>
    <string name="share_place_date_start">Born on: %1$s</string>
    <string name="share_place_date_next">Next place: %1$s</string>
    <string name="share_place_days_today">That is today!</string>
    <plurals name="share_place_days">
        <item quantity="one">In %1$d day</item>
        <item quantity="other">In %1$d days</item>
    </plurals>
    <string name="share_tournament_name">%1$s</string>
    <string name="share_tournament_date_start">Born on: %1$s</string>
    <string name="searching_toolbar_actionview_hint">Search</string>
    <string name="main_menu_item_about">About</string>
    <string name="main_menu_item_help">Help</string>
    <string name="settings_title">Settings</string>
</resources>