<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_games"
        android:orderInCategory="2"
        android:title="@string/action_games"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_table"
        android:orderInCategory="3"
        android:title="@string/action_table"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_participants"
        android:orderInCategory="4"
        android:title="@string/action_participants"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="5"
        android:title="@string/action_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_draw"
        android:orderInCategory="6"
        android:title="@string/draw"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_tours"
        android:orderInCategory="7"
        android:title="@string/tours"
        app:showAsAction="never" />-->
</menu>
