<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/baseline_refresh_24"
        android:title="Refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/searching_toolbar_actionview_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"></item>

    <item
        android:id="@+id/item_show_users"
        android:orderInCategory="2"
        android:title="@string/action_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_settings"
        android:orderInCategory="3"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_about"
        android:orderInCategory="4"
        android:title="@string/main_menu_item_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_help"
        android:orderInCategory="5"
        android:title="@string/main_menu_item_help"
        app:showAsAction="never" />
</menu>