<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
  <!--  <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_tournaments_search"
        android:orderInCategory="1"
        android:title="@string/action_tournaments_search"
        app:showAsAction="never" />
  <item
      android:id="@+id/action_add_tournament"
      android:orderInCategory="2"
      android:title="@string/addTournament"
      app:showAsAction="never" />
  <item
      android:id="@+id/item_about"
      app:showAsAction="never"
      android:title="@string/main_menu_item_about"/>

  <item
      android:id="@+id/item_help"
      app:showAsAction="never"
      android:title="@string/main_menu_item_help"/>
</menu>
