<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/user_name_text_view"
            style="@style/TextView.Primary.Header"
            android:layout_below="@id/user_image_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/userName"/>

        <TextView
            android:id="@+id/user_surname_text_view"
            style="@style/TextView.Primary.Header"
            android:layout_below="@id/user_image_view"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/user_name_text_view"
            android:text="@string/userSurname"/>

        <TextView
            android:id="@+id/user_rating_static_text_view"
            style="@style/TextView.Secondary"
            android:layout_below="@id/user_name_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/userRating"/>

        <TextView
            android:id="@+id/user_rating_text_view"
            style="@style/TextView.Secondary"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_toEndOf="@+id/user_rating_static_text_view"
            android:layout_below="@id/user_name_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/userRating_number"/>

        <TextView
            android:id="@+id/user_location_icon_text_view"
            style="@style/TextIcon"
            android:layout_alignBaseline="@id/user_location_text_view"
            android:layout_below="@id/user_name_text_view"
            android:layout_toEndOf="@id/user_rating_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:text="@string/fa_map_marker"/>

        <TextView
            android:id="@+id/user_location_text_view"
            style="@style/TextView.Secondary"
            android:layout_below="@id/user_name_text_view"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_toEndOf="@id/user_location_icon_text_view"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/user_status_text_view"
            style="@style/TextView.Primary"
            android:layout_below="@id/user_rating_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/default_text"/>

        <TextView
            android:id="@+id/count_friends_label_text_view"
            style="@style/TextView.Secondary"
            android:layout_below="@id/user_status_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/friends_hint"/>

        <TextView
            android:id="@+id/count_friends_text_view"
            style="@style/TextView.Primary.Bold"
            android:layout_below="@id/user_status_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_toEndOf="@+id/count_friends_label_text_view"
            android:layout_marginStart="@dimen/two_dp"
            android:text="4"/>

        <TextView
            android:id="@+id/coach_name_label_text_view"
            style="@style/TextView.Secondary"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/count_friends_text_view"
            android:layout_below="@id/user_status_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/coach_hint"/>
        <TextView
            android:id="@+id/coach_name_text_view"
            style="@style/TextView.Primary.Bold"
            android:layout_marginStart="@dimen/two_dp"
            android:layout_toEndOf="@id/coach_name_label_text_view"
            android:layout_below="@id/user_status_text_view"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/default_text"/>
    </RelativeLayout>

    <View
        android:id="@+id/delimeter_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="@dimen/two_dp"
        android:background="@color/gray_mercury"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_tournaments_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>