<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewRegistration"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <FrameLayout
            android:id="@+id/frame_layout_add_avatar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_add_avatar_btn"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_birthday_person" />

            <android.support.design.widget.FloatingActionButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|end"
                android:clickable="false"
                android:src="@drawable/ic_add_a_photo"
                app:elevation="0dp"
                app:fabCustomSize="40dp" />
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo5" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- ShortDescription Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_surname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userSurname"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Patronymic Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_patronymic_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userPatronymic"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Rating Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_rating_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userRating"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/s_genderSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#d11f08"
            android:padding="5dp" />

        <Spinner
            android:id="@+id/s_coachSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#d11f08"
            android:padding="5dp" />

        <Spinner
            android:id="@+id/s_rankSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#d11f08"
            android:padding="5dp" />

        <Spinner
            android:id="@+id/s_countrySpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#d11f08"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/i_calendar_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:src="@drawable/ic_calendar_black_48dp" />

        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/t_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/e_reEnterPassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/renterPassword"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/b_registration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/createAccount" />

        <TextView
            android:id="@+id/t_link_authorization"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/isMember"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>